# todolist

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README_canonical.md
.github/workflows/: ci.yml  pages.yml  release.yml
docs/tutorials/: tutorial.md
src/: log.c  log.h  main.c  todolist.c  todolist.h
tests/: test_todolist.c
tools/: README_precommit.md  pre-commit-static-analysis.sh
